--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/bin/main.rs"
 [dependencies]
 clap = "2"
 failure = "0.1"
+glob = "0.2"
 memmap = "0.6"
 structopt = "0.1"
 structopt-derive = "0.1"
@@ -23,6 +24,7 @@ serde_json = "1.0"
 rayon = "0.9"
 regex = "0.2"
 strfmt = "0.1"
+termcolor = "0.3"
 toml = "0.4"
 
 [dependencies.ordermap]
