--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "temper"
+license = "BSD-3-Clause"
 version = "0.1.0"
 authors = ["David Cao <david@teknik.io>"]
 
@@ -15,9 +16,8 @@ path = "src/bin/main.rs"
 clap = "2"
 failure = "0.1"
 glob = "0.2"
+lazy_static = "1.0"
 memmap = "0.6"
-structopt = "0.1"
-structopt-derive = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
