--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,10 @@ toml = "0.4"
 version = "0.3"
 features = ["serde-1"]
 
+[dev-dependencies]
+bencher = "0.1"
+quickcheck = "0.6"
+
 [features]
 accel = ["regex/simd-accel", "bytecount/avx-accel", "bytecount/simd-accel"]
 
