--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ harness = false
 [dependencies]
 bytecount = "0.2"
 clap = "2"
+crossbeam = "0.3"
 crossbeam-channel = "0.1"
 crossbeam-deque = "0.3"
 failure = "0.1"
@@ -26,6 +27,7 @@ ignore = "0.4"
 lazy_static = "1.0"
 memchr = "2.0"
 memmap = "0.6"
+num_cpus = "1.8"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
